--- a/index.html
+++ b/index.html
@@ -1,19 +1,167 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Live News Headlines</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8" />
+  <title>GeoNames Map Search</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"></script>
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
+    #map {
+      position: absolute;
+      top: 80px;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+
+    #topBar {
+      position: absolute;
+      top: 5px;
+      left: 10px;
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      z-index: 1001;
+      background-color: white;
+      padding: 5px 10px;
+      border-radius: 5px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+
+    #header {
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: bold;
+      color: black;
+      font-size: 16px;
+    }
+
+    #searchBox {
+      z-index: 1000;
+    }
+
+    #history {
+      position: absolute;
+      top: 55px;
+      left: 10px;
+      background-color: white;
+      border-radius: 5px;
+      padding: 5px 10px;
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      z-index: 1000;
+    }
+
+    #history span {
+      display: inline-block;
+      margin-right: 10px;
+      cursor: pointer;
+      color: #007bff;
+    }
+
+    #history span:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Today's Top News</h1>
-    <input type="text" id="searchInput" placeholder="Search news...">
-    <button id="searchBtn">Search</button>
-  </header>
-  <main>
-    <div id="news-container"></div>
-  </main>
-  <script src="script.js"></script>
+  <div id="topBar">
+    <div id="header">Client-side Freestyle Project for Jay Chao</div>
+    <div id="searchBox">
+      <input type="text" id="searchInput" placeholder="Search location" />
+      <button onclick="searchLocation()">Search</button>
+    </div>
+  </div>
+
+  <div id="history"><strong>Recent:</strong></div>
+
+  <div id="map"></div>
+
+  <script>
+    var map = L.map('map').setView([0, 0], 2);
+
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+
+    var marker;
+    var searchHistory = [];
+
+    function updateHistory(query) {
+      if (!searchHistory.includes(query)) {
+        searchHistory.unshift(query); // add to front
+        if (searchHistory.length > 5) searchHistory.pop(); // keep max 5
+      }
+
+      const historyContainer = document.getElementById('history');
+      historyContainer.innerHTML = '<strong>Recent:</strong> ';
+      searchHistory.forEach(item => {
+        const el = document.createElement('span');
+        el.textContent = item;
+        el.onclick = () => {
+          document.getElementById('searchInput').value = item;
+          searchLocation();
+        };
+        historyContainer.appendChild(el);
+      });
+    }
+
+    function searchLocation() {
+      var query = document.getElementById('searchInput').value;
+      if (!query) return;
+
+      console.log("Searching for:", query);
+      updateHistory(query);
+
+      fetch('https://nominatim.openstreetmap.org/search?format=json&q=' + encodeURIComponent(query))
+        .then(response => response.json())
+        .then(data => {
+          if (data.length > 0) {
+            var lat = parseFloat(data[0].lat);
+            var lon = parseFloat(data[0].lon);
+
+            map.setView([lat, lon], 13);
+
+            if (marker) {
+              marker.setLatLng([lat, lon]);
+            } else {
+              marker = L.marker([lat, lon]).addTo(map);
+            }
+
+            const username = 'buffalochnage'; // Replace with your GeoNames username
+
+            fetch(`https://secure.geonames.org/findNearbyPlaceNameJSON?lat=${lat}&lng=${lon}&username=${username}`)
+              .then(res => res.json())
+              .then(geo => {
+                console.log("GeoNames result:", geo);
+
+                if (geo.geonames && geo.geonames.length > 0) {
+                  const place = geo.geonames[0];
+                  const popupText = `
+                    <strong>${place.name}, ${place.countryName}</strong><br/>
+                    Admin: ${place.adminName1}<br/>
+                    Population: ${place.population}<br/>
+                    latitude: ${place.lat}, longitude: ${place.lng}
+                  `;
+                  marker.bindPopup(popupText).openPopup();
+                }
+              });
+          }
+        });
+    }
+
+    // Trigger search on Enter key
+    document.getElementById('searchInput').addEventListener('keydown', function(e) {
+      if (e.key === 'Enter') {
+        searchLocation();
+      }
+    });
+  </script>
 </body>
 </html>
