--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
   <div id="topBar">
-    <div id="header">Client-side Freestyle Project for Jay Chao</div>
+    <div id="header">Locate Anywhere on the Earth:</div>
     <div id="searchBox">
       <input type="text" id="searchInput" placeholder="Search location" />
       <button onclick="searchLocation()">Search</button>
